# Projects

LABtest/: Dockerfile  main.py  pyproject.toml
Stripe-test/: app.py  pyproject.toml
Stripe-test/templates/: checkout.html
Test-Project-on-Django/: READ_ME!!!.txt
Test-Project-on-Django/myproject/main/: urls.py  views.py
Test-Project-on-Django/myproject/main/templates/main/: index.html  layout.html
Test-Project-on-Django/myproject/myproject/: urls.py
Test-Project-on-Django/myproject/news/: forms.py  models.py  views.py
Test-Project-on-Django/myproject/news/migrations/: 0001_initial.py  0002_articles_delete_article.py  0003_articles_photo_alter_articles_date.py  0005_remove_newsitem_anons_remove_newsitem_photo_and_more.py  0006_delete_newsitem_alter_articles_options_and_more.py  0008_alter_articles_date.py  0009_alter_articles_date.py  0010_alter_articles_date.py
pip-test/: main.py
postNotes/: pyproject.toml
postNotes/notes/noteapp/: forms.py  urls.py  views.py
postNotes/notes/noteapp/migrations/: 0001_initial.py  0002_note_user_tag_user_alter_tag_name_and_more.py
postNotes/notes/notes/: settings.py  urls.py
postNotes/notes/users/: admin.py  forms.py  models.py  urls.py  userprofile.py  views.py
postNotes/notes/users/migrations/: 0001_initial.py  0002_userprofile.py
testdjg/: pyproject.toml
testdjg/myproject/: db.sqlite3
testdjg/myproject/myproject/: settings.py
testdjg/myproject/news/: urls.py
testdjg/myproject/news/migrations/: 0004_newsitem_remove_articles_anons.py  0007_alter_articles_date_alter_articles_image.py
(+11 files in other folders)
