[tool.poetry]
name = "stripe-test"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mod = false

[tool.poetry.dependencies]
python = "^3.13"
stripe = "^11.1.1"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
